docs: add detailed markdown documentation for image classification filter using CLIP

--- a/notebooks/model_openai.ipynb
+++ b/notebooks/model_openai.ipynb
@@ -1,6 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "42c00217",
+   "metadata": {},
+   "source": [
+    "#  🖥️ Filtro de Clasificación con CLIP\n",
+    "\n",
+    "Este cuaderno implementa un sistema de pre-filtrado de imágenes utilizando el modelo CLIP de OpenAI. El objetivo es identificar si una imagen contiene un componente de hardware específico antes de enviarla a un modelo de Deep Learning más pesado, descartando automáticamente imágenes irrelevantes (\"junk\").\n",
+    "\n",
+    "### 👨‍💻 Autores del proyecto\n",
+    "\n",
+    "* [Alejandro Barrionuevo Rosado](https://github.com/Alejandro-BR)\n",
+    "* [Alvaro López Guerrero](https://github.com/Alvalogue72)\n",
+    "* [Andrei Munteanu Popa](https://github.com/andu8705)\n",
+    "\n",
+    "Máster de FP en Inteligencia Artifical y Big Data - CPIFP Alan Turing - `Curso 2025/2026`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfbceac6",
+   "metadata": {},
+   "source": [
+    "## 1. Configuración y Carga del Modelo\n",
+    "\n",
+    "Importamos `transformers` para manejar el modelo CLIP y `torch` para el procesamiento numérico.\n",
+    "\n",
+    "* Modelo utilizado: `openai/clip-vit-base-patch32` Es un modelo potente que entiende conceptos visuales a través de lenguaje natural (zero-shot learning).\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "febd223f",
@@ -38,6 +68,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f29854ae",
+   "metadata": {},
+   "source": [
+    "## 2. Definición del Diccionario de Conceptos\n",
+    "\n",
+    "Para que CLIP sepa qué buscar, definimos dos categorías de etiquetas en lenguaje natural:\n",
+    "\n",
+    "| Categoría         | Descripción                                                                 |\n",
+    "|-------------------|-----------------------------------------------------------------------------|\n",
+    "| COMPONENT_LABELS  | Etiquetas específicas de hardware (GPU, CPU, RAM, etc.) que queremos aceptar.|\n",
+    "| JUNK_LABELS       | Etiquetas de \"ruido\" (caras, paisajes, capturas de pantalla) que queremos rechazar.|"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "27d0c1d5",
@@ -72,6 +117,23 @@
     "    \"a diagram, chart, or technical drawing\",\n",
     "    \"a photo of cables, peripherals, or accessories only\"\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9db3ffca",
+   "metadata": {},
+   "source": [
+    "## 3. Lógica del Filtro\n",
+    "La función `filter_images_for_hardvisionai` realiza los siguientes pasos:\n",
+    "\n",
+    "1. **Codificación**: Convierte la imagen y todas las etiquetas (componentes + junk) en vectores numéricos usando el procesador de CLIP.\n",
+    "2. **Cálculo de Probabilidades**: Utiliza una función `softmax` para determinar qué tan bien encaja la imagen con cada etiqueta.\n",
+    "3. **Criterios de Aceptación**: Para que una imagen pase el filtro, debe cumplir:\n",
+    "\n",
+    "    * Que la suma de probabilidades de la categoría \"Hardware\" supere un umbral (**threshold**) (por defecto 60%).\n",
+    "    * Que la etiqueta ganadora absoluta sea efectivamente un componente de hardware.\n",
+    "    * Que la confianza de la etiqueta ganadora sea superior al 15%."
    ]
   },
   {
@@ -133,6 +195,18 @@
     "        print(\"  ❌ Imagen rechazada: No parece ser un componente de PC.\")\n",
     "        return None\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e8d4cb7",
+   "metadata": {},
+   "source": [
+    "## 4. Pruebas y Validación\n",
+    "\n",
+    "En la siguiente celda se prueba el funcionamiento del modelo recorriendo las distintas imágenes de una carpeta de pruebas (`../img/tests`).\n",
+    "\n",
+    "Se muestra un reporte de las probabilidades detectadas (Hardware vs. Junk) para cada imagen. Al final, se genera un resumen con el conteo de imágenes aceptadas y rechazadas, permitiendo ajustar los umbrales de confianza según los resultados obtenidos."
    ]
   },
   {
@@ -251,6 +325,27 @@
     "print(f\"\\n{'='*60}\")\n",
     "print(f\"RESUMEN img/tests: {resultados_img['aceptadas']} aceptadas, {resultados_img['rechazadas']} rechazadas\")\n",
     "print('='*60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dc5e409",
+   "metadata": {},
+   "source": [
+    "## 5. Conclusiones\n",
+    "\n",
+    "El uso de CLIP como filtro previo para imágenes de componentes de hardware permite reducir significativamente el número de imágenes irrelevantes que llegan a modelos de Deep Learning más complejos. Esto optimiza recursos y mejora la eficiencia del pipeline de clasificación. El sistema es flexible y puede adaptarse fácilmente a nuevas categorías o a cambios en los criterios de aceptación simplemente modificando las listas de etiquetas o los umbrales de decisión.\n",
+    "\n",
+    "- **Ventajas:**\n",
+    "    - Rápida inferencia y filtrado zero-shot.\n",
+    "    - Fácil personalización de etiquetas y umbrales.\n",
+    "    - Reducción de falsos positivos en el pipeline principal.\n",
+    "\n",
+    "- **Limitaciones:**\n",
+    "    - La calidad del filtrado depende de la precisión de las descripciones y de la cobertura de las etiquetas.\n",
+    "    - Puede requerir ajuste fino para casos de borde o imágenes ambiguas.\n",
+    "\n",
+    "En resumen, CLIP es una herramienta poderosa para pre-filtrado en tareas de visión por computador, especialmente cuando se requiere flexibilidad y rapidez en la adaptación a nuevos conceptos."
    ]
   }
  ],
