docs: add authors

--- a/notebooks/scraping/scraping_steam.ipynb
+++ b/notebooks/scraping/scraping_steam.ipynb
@@ -13,7 +13,15 @@
     "\n",
     "2.  **Requisitos de videojuegos:** Especificaciones minimas y recomendadas de los titulos mas vendidos.\n",
     "\n",
-    "El proceso genera dos tipos de salidas estructuradas (`CSV` y `JSON`) para su posterior procesamiento en la fase de entrenamiento del modelo."
+    "El proceso genera dos tipos de salidas estructuradas (`CSV` y `JSON`) para su posterior procesamiento en la fase de entrenamiento del modelo.\n",
+    "\n",
+    "### 👨‍💻 Autores del proyecto\n",
+    "\n",
+    "* [Alejandro Barrionuevo Rosado](https://github.com/Alejandro-BR)\n",
+    "* [Alvaro López Guerrero](https://github.com/Alvalogue72)\n",
+    "* [Andrei Munteanu Popa](https://github.com/andu8705)\n",
+    "\n",
+    "Máster de FP en Inteligencia Artifical y Big Data - CPIFP Alan Turing - `Curso 2025/2026`"
    ]
   },
   {
