Scraping Pangoly + PCPartPicker Motherboards (Actualizado el Markdown)

--- a/notebooks/scraping/scraping_pcpartpicker_motherboards.ipynb
+++ b/notebooks/scraping/scraping_pcpartpicker_motherboards.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Web Scraping de PCPartPicker\n",
     "\n",
-    "Este cuaderno Jupyter contiene un script para extraer datos de compatibilidad y precios de componentes de PC desde `es.pcpartpicker.com`. El objetivo final es generar un dataset en formato **JSONL plano**, ideal para entrenar LLMs.\n",
+    "Este cuaderno Jupyter contiene un script para extraer datos de compatibilidad y precios de componentes de PC desde `es.pcpartpicker.com`. El objetivo final es generar un dataset en formato JSONL plano, ideal para entrenar LLMs.\n",
     "\n",
     "### Cloudflare\n",
     "PCPartPicker está fuertemente protegido por el WAF (Web Application Firewall) de Cloudflare. Las librerias convencionales (`requests`, `BeautifulSoup` e incluso Selenium estandar) son bloqueadas instantaneamente. \n",
@@ -60,7 +60,10 @@
     "\n",
     "* **Perfil persistente**: Usamos el argumento `--user-data-dir` para que Chrome guarde las cookies de sesion. Esto es vital para que Cloudflare confie en el bot despues del primer Captcha resuelto manualmente.\n",
     "\n",
-    "* **Gestion de Captchas**: La funcion `comprobar_cloudflare` vigila el titulo de la pestaña. Si detecta \"Just a moment\", pausa la ejecucion, avisa al usuario por consola y espera pacientemente hasta que el humano resuelva el desafio."
+    "* **Deteccion dual de bloqueos (`comprobar_cloudflare`)**:\n",
+    "  1. **Captchas**: Vigila si el titulo cambia a \"Just a moment\". Si es asi, pausa y avisa al usuario para que resuelva el captcha manualmente.\n",
+    "\n",
+    "  2. **Rate limits (Error 429)**: Si el script scrapea demasiadas paginas seguidas, PCPartPicker puede aplicar un \"Soft-Ban\" silencioso por saturacion. El script lo detecta, se pausa durante 60 segundos para dejar enfriar la IP de la VPN (o la propia en caso de que se este utilizando sin VPN), y recarga la pagina para continuar automaticamente."
    ]
   },
   {
@@ -120,7 +123,7 @@
     "\n",
     "Aquí es donde resolvemos dos problemas críticos del *scraping*:\n",
     "\n",
-    "1.  **Nomenclatura CSS dinamica**: PCPartPicker usa clases con doble guion bajo (`td__nameWrapper`), lo cual puede romper la busqueda tradicional. Usamos selectores CSS con coincidencia parcial (`[class*='nameWrapper']`) para que el script sea a prueba de balas frente a cambios menores en la web.\n",
+    "1. **Esperas dinamicas y precisas**: Tenemos dos tipos de esperas. `esperar_carga_tabla` busca la tabla principal en los catalogos. Sin embargo, para no perder tiempo en las paginas individuales de las placas base (que no tienen tabla), usamos `esperar_pagina_placa`, la cual busca especificamente que el DOM cargue los enlaces de compatibilidad. Esto evita congelamientos innecesarios por `Timeout`.\n",
     "\n",
     "2.  **Limpieza de precios (Regex)**: Originalmente, los precios venian contaminados con texto de los botones (`\"€160.80Add\"`). La funcion `limpiar_precio_a_float` usa expresiones regulares para aislar los numeros y convertirlos a formato `float`, devolviendo `null` si el componente no tiene precio, lo cual es la mejor practica para alimentar un LLM."
    ]
@@ -207,7 +210,7 @@
    "source": [
     "## 3. Aplanamiento de datos (Flattening) y paginacion\n",
     "\n",
-    "Para que un LLM entienda las relaciones entre componentes sin confundirse con estructuras JSON anidadas y complejas, se ha implementado el **aplanamiento de datos** (igual que en Pangoly).\n",
+    "Para que un LLM entienda las relaciones entre componentes sin confundirse con estructuras JSON anidadas y complejas, se ha implementado el aplanamiento de datos (igual que en Pangoly).\n",
     "\n",
     "En lugar de crear un objeto masivo por cada placa base, la funcion `raspar_y_guardar_componentes` genera una relacion 1 a 1 por cada linea (placa base - componente compatible) y la guarda inmediatamente en el archivo `.jsonl`."
    ]
@@ -265,11 +268,13 @@
    "source": [
     "## 4. Ejecucion principal\n",
     "\n",
-    "La funcion `main` coordina todo el proceso. Itera sobre el catalogo de placas base, entra en cada perfil y extrae los enlaces de compatibilidad.\n",
+    "La funcion `main` coordina todo el proceso iterando sobre el catálogo de placas base. \n",
+    "\n",
+    "**Extraccion infalible de compatibilidades:**\n",
+    "PCPartPicker cambia su diseño web (clases CSS) dependiendo de si el producto es nuevo o antiguo. Para evitar que el script falle al no encontrar el contenedor visual de los enlaces, se ha implementado una estrategia a nivel de \"esqueleto\" HTML: le pedimos a Selenium que busque cualquier etiqueta `<a>` cuyo enlace (`href`) contenga la palabra clave `compatible_with=`. Esto garantiza que si el enlace existe en el codigo, el script lo capturará sin importar su posición visual.\n",
     "\n",
     "**Manejo de cierres de ventana:**\n",
-    "Uno de los mayores retos fue evitar que el script colapsara con un error masivo de codigo (`Traceback`) si el usuario decidia cerrar la ventana de Chrome manualmente para detener el proceso. \n",
-    "Se ha implementado un sistema que captura excepciones como `NoSuchWindowException` o errores de sesion inválida (`InvalidSessionIdException`). Si esto ocurre, el script asume que es un cierre intencionado, finaliza la ejecucion ordenadamente y asegura que todos los datos recopilados hasta ese milisegundo estén a salvo."
+    "Implementamos un sistema que captura excepciones como `NoSuchWindowException` o errores de sesion (`InvalidSessionIdException`). Si el usuario cierra Chrome manualmente para detener el *scraping*, el script lo detecta, finaliza y asegura que todos los datos aplanados guardados en el archivo `.jsonl` hasta ese milisegundo estén 100% seguros y sin corromper."
    ]
   },
   {
@@ -286,7 +291,7 @@
     "        url_base_motherboards = \"https://es.pcpartpicker.com/products/motherboard/\"\n",
     "\n",
     "        # PAGINA POR LA QUE EMPEZAR\n",
-    "        pagina_motherboard = 2\n",
+    "        pagina_motherboard = 1\n",
     "        # =========================\n",
     "\n",
     "        print(\"\\nIniciando recoleccion de placas base...\")\n",
